--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -206,6 +206,8 @@
 
       <textarea class="description" data-field="description" placeholder="What does your app do?">{{description}}</textarea>
 
+      <div class="spacer"></div>
+      
     </div>
 
     <div class="right-float on-top">
