changed slingshot filename scheme

--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -46,7 +46,7 @@
           <input type="text" placeholder="Browse" readonly="true" data-field="filename" class="filename existing" data-action="choose-file" data-name="spk" value="{{stripFilename spkLink}}" />
           <input type="file" class="file-picker" data-action="file-picker" data-for="spk" accept=".spk" />
           <div class="two square-buttons rem-space-float">
-            <div class="square-button dark" data-action="upload-spk"><i class="fa fa-download"></i></div>
+            <a class="square-button dark" href="{{spkLink}}"><i class="fa fa-download"></i></a>
             <div class="square-button dark" data-action="upload-spk"><i class="icon-garbage"></i></div>
           </div>
 
