--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -66,16 +66,16 @@
             <div class="divider"></div>
 
             <div class="key">Ported by:</div><div class="value">{{getUsername author}}&nbsp;</div>
-            <div class="key">License:</div><div class="value">{{license}}&nbsp;</div>
-            <div class="key">Code:</div><div class="value">On Github TODO&nbsp;</div>
-            <div class="key">Version:</div><div class="value">{{getLatestVersion}}&nbsp;</div>
+            <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
+            <div class="key">Code:</div><div class="value">{{verboseNone codeLink}}&nbsp;</div>
+            <div class="key">Version:</div><div class="value">{{verboseNone getLatestVersion}}&nbsp;</div>
 
           </div>
 
           <div class="rem-space-float">
 
             <div class="app-description">
-              {{description}}
+              {{{description}}}
             </div>
 
           </div>
