minor fixes to upload-app page

--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -33,6 +33,14 @@
 
     }
 
+    .spacer {
+
+      clear: both;
+      height: 1.9rem;
+      display: block;
+
+    }
+
     .half-col {
 
       width: 50%;
