tidied up css/html for admin item filters

--- a/app/client/templates/admin/admin.html
+++ b/app/client/templates/admin/admin.html
@@ -14,7 +14,7 @@
 
     {{#each adminFilters}}
 
-      <div class="admin-filter {{color}} {{active}}">
+      <div class="admin-filter {{color}} {{active}}" data-action="select-filter">
 
         <i class="{{icon}}"></i>
         <div class="text">
