--- a/app/client/templates/components/app-item-full-width.scss
+++ b/app/client/templates/components/app-item-full-width.scss
@@ -135,6 +135,7 @@
           text-overflow: ellipsis;
           font-size: 1.5rem;
           color: #7d627c;
+          white-space: nowrap;
 
         }
 
