--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -26,22 +26,24 @@
 
           <div class="top-section clearfix">
 
-            <div class="left-float">
+            <div class="right-float">
+
+              <div class="pad-top-to-align">
+                <div class="edit-button">
+                  <a class="sandstorm-button neutral small" href="/upload/edit/{{_id}}">
+                    <i class="icon-edit"></i>
+                    <span class="text">EDIT</span>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="rem-space-float">
 
               <div class="app-name-full-width">{{name}}</div>
 
               <div class="app-author-full-width">{{getUsername author}}</div>
-
-            </div>
-
-            <div class="abs-right">
-
-              <div class="edit-button">
-                <a class="sandstorm-button neutral small" href="/upload/edit/{{_id}}">
-                  <i class="icon-edit"></i>
-                  <span class="text">EDIT</span>
-                </a>
-              </div>
 
             </div>
 
@@ -88,19 +90,19 @@
 
         <div class="button-block">
 
-          <div class="sandstorm-button neutral" data-action="approve">
+          <div class="sandstorm-button color green" data-action="approve">
             <i class="icon-approved_light"></i>
             <div class="text">Approve</div>
           </div>
-          <div class="sandstorm-button neutral" data-action="request-revision">
+          <div class="sandstorm-button color purple" data-action="request-revision">
             <i class="icon-revisions"></i>
             <div class="text">Request Revision</div>
           </div>
-          <div class="sandstorm-button neutral" data-action="flag">
+          <div class="sandstorm-button color yellow" data-action="flag">
             <i class="icon-flagged_light"></i>
             <div class="text">Flag</div>
           </div>
-          <div class="sandstorm-button neutral" data-action="reject">
+          <div class="sandstorm-button color black" data-action="reject">
             <i class="icon-rejected_light"></i>
             <div class="text">Reject</div>
           </div>
