--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -20,7 +20,7 @@
           SUBMIT APP FOR REVIEW
         </div>
         <div class="sandstorm-button neutral" data-action="save-app">
-          SAVE
+          SAVE DRAFT
         </div>
         <i class="icon-garbage" data-action="delete-app"></i>
       </div>
@@ -207,7 +207,7 @@
       <textarea class="description" data-field="description" placeholder="What does your app do?">{{description}}</textarea>
 
       <div class="spacer"></div>
-      
+
     </div>
 
     <div class="right-float on-top">
@@ -217,7 +217,7 @@
           SUBMIT APP FOR REVIEW
         </div>
         <div class="sandstorm-button neutral" data-action="save-app">
-          SAVE
+          SAVE DRAFT
         </div>
         <i class="icon-garbage" data-action="delete-app"></i>
       </div>
