--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -81,7 +81,7 @@
 .icon-garbage:before { content: "\f10a"; }
 .icon-gh:before { content: "\f10b"; }
 .icon-go:before { content: "\f10c"; }
-.icon-logo:before { content: "\f10d"; position: relative; bottom: -0.3em; left: -0.25em; }
+.icon-logo:before { content: "\f10d"; position: relative; bottom: -0.3em; left: -0.25em; width: 18rem; }
 .icon-logo-image:before { content: "\f10e"; }
 .icon-market:before { content: "\f10f"; }
 .icon-my:before { content: "\f110"; }
