--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -22,6 +22,12 @@
     box-sizing: border-box;
     position: relative;
 
+    .description {
+
+      overflow: auto;
+
+    }
+
     .image-section {
 
       float: left;
