--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -25,7 +25,7 @@
     font-size: 1.2em;
     margin-right: 0.5rem;
     display: none;
-    vertical-align: text-bottom;
+    vertical-align: middle;
 
     &:last-child {
       margin-left: 0.5rem;
@@ -137,6 +137,7 @@
         i { color: #ffffff; }
       }
     }
+
   }
 
   &.active {
@@ -152,6 +153,21 @@
     font-size: 1.2rem;
     padding-left: 1rem;
     padding-right: 1rem;
+
+  }
+
+  .button-search {
+
+    display: inline-block;
+    vertical-align: middle;
+    box-shadow: none;
+    background: none;
+    border: none;
+    color: #6d627c;
+    width: 14rem;
+    &:focus {
+      outline: none;
+    }
 
   }
 
