split autoValued app schema field to record last updated by user and last updated by admin

--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -30,7 +30,7 @@
 
               <div class="pad-top-to-align">
                 <div class="edit-button">
-                  <a class="sandstorm-button neutral small" href="/upload/edit/{{_id}}">
+                  <a class="sandstorm-button neutral small" href="/admin/edit/{{_id}}">
                     <i class="icon-edit"></i>
                     <span class="text">EDIT</span>
                   </a>
