added suggested categories button and schema field

--- a/app/client/templates/admin/admin.html
+++ b/app/client/templates/admin/admin.html
@@ -40,6 +40,15 @@
 
   {{/each}}
 
+  <div class="admin-filter grey square" data-action="suggested-genres">
+    <div class="text">
+      Suggested Genres
+    </div>
+    <div class="count">
+      {{suggestedGenresCount}}
+    </div>
+  </div>
+
   <div class="filter-description-row clearfix">
 
     <div class="right-float">
