--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -49,7 +49,7 @@ $app-install-bg: #eee4f4;
 $app-install-icon-col: #c9add0;
 $star-col-dark: #783189;
 $star-col-light: #c9add0; // THIS IS CLEARLY WRONG (GIVEN AS #783189)
-$app-price-col: #783189;
+$app-price-col: #ea7e23;
 $app-price-free-col: #44c963;
 $free-text: #344c96; // THIS IS ALSO WRONG (GIVEN AS #344c963)
 $installed-bar-text: #935aa1;
