--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -173,7 +173,7 @@
       <h3 class="title">Screenshots</h3>
 
       <div class="screenshot-instructions">
-        <div>Show your app in action. These images will be displayed in the a side-scroll. For the best results, we suggest your screenshots be:</div>
+        <div>Show your app in action. These images will be displayed in a side-scroll. For the best results, we suggest your screenshots be:</div>
         <div><strong>800px</strong> wide by <strong>450px</strong> high (minimum) in PNG or JPEG format.</div>
       </div>
 
