--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -95,7 +95,10 @@
       <div class="genre-list">
         {{#each categories}}
           {{#if this.editing}}
-            <input class="square-button action input" data-field="new-genre-name" value={{newGenreName}} /><div class="square-button icon" data-action="save-genre"><i class="fa fa-plus"></i></div>
+            <div class="button-wrapper">
+              <input class="square-button action input" data-field="new-genre-name" value={{newGenreName}} />
+              <div class="square-button icon" data-action="save-genre"><i class="fa fa-plus"></i></div>
+            </div>
           {{else}}
             <div class="square-button {{#if selected}}{{#if new}}light{{else}}active{{/if}}{{/if}}" data-action="select-genre">{{upperCase name}}</div>
           {{/if}}
