admin options limited as per spec, tints removed

--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -146,6 +146,10 @@
 
   }
 
+  &.hidden {
+    display: none !important;
+  }
+
   &.active {
     @extend .sandstorm-button.secondary;
     z-index: 1;
