--- a/app/client/templates/admin/admin.html
+++ b/app/client/templates/admin/admin.html
@@ -123,4 +123,59 @@
 
   <div class="divider"></div>
 
+  {{#with genreTemp}}
+    {{> Template.dynamic template=this.template data=this.data}}
+  {{/with}}
+
+</template>
+
+
+<template name="suggestedGenres">
+
+  {{#each genres}}
+
+  <div class="left-float push-right">
+
+    <div class="admin-filter grey square">
+      <div class="text">
+        {{name}}
+      </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="genre-button {{#if equal approved 0}}approved{{/if}}" data-action="approve-genre">
+      <i class="icon-approved_dark"></i>
+      <div class="caption">
+        Approve
+      </div>
+    </div>
+
+    <div class="genre-button {{#if equal approved 1}}rejected{{/if}}" data-action="reject-genre">
+      <i class="icon-rejected_dark"></i>
+      <div class="caption">
+        Reject
+      </div>
+    </div>
+
+  </div>
+
+  <div class="rem-space-float">
+
+    {{#each appList}}
+      {{> appItemTiny app=this}}
+    {{/each}}
+
+  </div>
+
+  {{/each}}
+
+</template>
+
+<template name="genreDisplay">
+
+  {{#each appList}}
+    {{> appItemTiny app=this}}
+  {{/each}}
+
 </template>
