--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -199,3 +199,31 @@
   </div>
 
 </template>
+
+<template name="appItemTiny">
+
+  <div class="app-item-tiny">
+
+    <div class="app-item-inner" data-action="admin-edit">
+
+      {{#with app}}
+
+        <div class="image-surround large">
+
+          <div class="image" style="background-image: url('{{imageUrl image}}');"></div>
+
+        </div>
+
+        <div class="text-section">
+
+          <div class="app-name">{{name}}</div>
+
+        </div>
+
+      {{/with}}
+
+    </div>
+
+  </div>
+
+</template>
