added markdown calculator, plus updated fake app generator.  fixes #80

--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -68,7 +68,7 @@
             <div class="rem-space-float">
 
               <div class="app-description">
-                {{{description}}}
+                {{{htmlDescription}}}
               </div>
 
             </div>
