--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -75,7 +75,7 @@
           <div class="rem-space-float">
 
             <div class="app-description">
-              {{{description}}}
+              {{{htmlDescription}}}
             </div>
 
           </div>
