fixed genre subscription issue

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -101,7 +101,7 @@
           </div>
 
           <div class="installed-version">
-            V {{installDetails.version}}
+            V {{installDetails.version.number}}
           </div>
 
         </div>
