--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -93,15 +93,7 @@
 
         <h3 class="title">Icon</h3>
 
-        <div class="identicon-container">
-          <div class="identicon" style="background-image: url('{{imageUrl image}}')" data-field="icon-image">#
-            <div class="tint"></div>
-            <div class="regenerate" data-action="regenerate-identicon"><i class="icon-rejected_dark"></i></div>
-            <div class="upload" data-action="choose-file" data-name="identicon"><i class="icon-myapps"></i></div>
-          </div>
-        </div>
-
-        <input type="file" class="file-picker" data-action="file-picker" data-for="identicon" accept="image/*" />
+        {{> iconPicker}}
 
         <div class="identicon-instructions">
           <div>For the best results, we suggest the icon be:</div>
@@ -154,30 +146,7 @@
         <div><strong>800px</strong> wide by <strong>450px</strong> high (minimum) in PNG or JPEG format.</div>
       </div>
 
-      {{#each screenshots}}
-
-        <div class="screenshot-container">
-          <div class="screenshot" style="background-image: url('{{imageUrl this}}')" data-action="change-screenshot"></div>
-          <div class="remove" data-action="remove-screenshot"><i class="icon-rejected_dark"></i></div>
-        </div>
-
-      {{/each}}
-      {{#each screenshotPlaceholders}}
-
-        <div class="screenshot-container">
-          <div class="screenshot placeholder" data-action="choose-file" data-name="screenshot">
-            <div class="contents">
-              <i class="icon-myapps"></i>
-              <div class="instruction">
-                Upload a Screenshot
-              </div>
-            </div>
-          </div>
-        </div>
-
-      {{/each}}
-
-      <input type="file" class="file-picker" data-action="file-picker" data-for="screenshot" accept="image/*" />
+      {{> screenshotPicker}}
 
       <h3 class="title">Description</h3>
 
@@ -238,5 +207,49 @@
     {{/each}}
     <div class="square-button action" data-action="suggest-genre">SUGGEST A NEW GENRE</div>
   </div>
+
+</template>
+
+
+<template name="iconPicker">
+
+  <div class="identicon-container">
+    <div class="identicon" style="background-image: url('{{imageUrl image}}')" data-field="icon-image">#
+      <div class="tint"></div>
+      <div class="regenerate" data-action="regenerate-identicon"><i class="icon-rejected_dark"></i></div>
+      <div class="upload" data-action="choose-file" data-name="identicon"><i class="icon-myapps"></i></div>
+    </div>
+  </div>
+
+  <input type="file" class="file-picker" data-action="file-picker" data-for="identicon" accept="image/*" />
+
+</template>
+
+<template name="screenshotPicker">
+
+  {{#each screenshots}}
+
+    <div class="screenshot-container">
+      <div class="screenshot" style="background-image: url('{{imageUrl this}}')" data-action="change-screenshot"></div>
+      <div class="remove" data-action="remove-screenshot"><i class="icon-rejected_dark"></i></div>
+    </div>
+
+  {{/each}}
+  {{#each screenshotPlaceholders}}
+
+    <div class="screenshot-container">
+      <div class="screenshot placeholder" data-action="choose-file" data-name="screenshot">
+        <div class="contents">
+          <i class="icon-myapps"></i>
+          <div class="instruction">
+            Upload a Screenshot
+          </div>
+        </div>
+      </div>
+    </div>
+
+  {{/each}}
+
+  <input type="file" class="file-picker" data-action="file-picker" data-for="screenshot" accept="image/*" />
 
 </template>
